src/objects/Solution__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>KCS Solution Article</description>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Solution</label>
    <pluralLabel>Solution</pluralLabel>
    <validationRules>
        <fullName>Restrict_Publishing</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
IsVisibleInCsp=true, 
IsVisibleInPrm=true, 
IsVisibleInPkb=true), 
$User.ProfileId !=&apos;00ej0000000tMiv&apos;)</errorConditionFormula>
        <errorMessage>You do not have access to publish articles externally. Please contact your Salesforce Administrator.</errorMessage>
    </validationRules>
</CustomObject>